package edu.fiuba.algo3.modelo;

public interface Objetivo {
    boolean estaCumplido();
}
