package edu.fiuba.algo3.modelo;

public class Pais {

    Jugador jugadorDominante;
    public Pais(String pais) {
    }

    public int cantidadEjercitos() {
        return 0;
    }

    public Jugador dominadoPor() {
        return this.jugadorDominante;
    }
}
