@startuml


class Turno {}

class Jugador {}

Juego *- "2 ..6" Jugador

Juego *-- "*" Turno

interface Objetivo {}

class Color {}

class Continente {}

class Pais {}

class Tablero {}

class Juego {
       +atacarDesdeA(Pais paisAtacante, Pais paisDefensor, int cantidadEjercitos)
}

Juego *- Tablero

class Ejercito {}

Tablero *- "50" Pais

Tablero *-- "6" Continente

Continente -> "*" Pais

Pais o- "1 ..*" Ejercito

Jugador *- Objetivo

Jugador *-- "*" Ejercito
Jugador *- Color


@enduml